# jpcre2

./: .gitattributes  .gitignore  .project  .travis.yml  API info  AUTHORS  Additional Info.txt  COPYING  ChangeLog  Doxyfile  LICENCE  Makefile  Makefile.am  Makefile.in  README  README.md  README.md.bak  README.mkdn  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.scan  configure~  crmd  jpcre2.cpp  jpcre2.h  jpcre2.hpp  jpcre2match.cpp  jpcre2replace.cpp  libpcre2-16.pc  libpcre2-32.pc  libpcre2-8.pc  libpcre2-posix.pc  libtool  pcre2-config  prepare  test  test.cpp  (+3 more)
doc/: Makefile.am  Makefile.in  README.md  crmkf  doxygen_entrydb_3732.tmp
doc/docbook/: README_8md.xml  README_8md__incl.md5  classjpcre2_1_1Regex.xml  classjpcre2_1_1RegexMatch.xml  classjpcre2_1_1RegexMatch__inherit__graph.md5  classjpcre2_1_1RegexReplace.xml  classjpcre2_1_1RegexReplace__inherit__graph.md5  classjpcre2_1_1Regex__coll__graph.md5  classstd_1_1allocator.xml  classstd_1_1allocator__inherit__graph.md5  classstd_1_1array.xml  classstd_1_1array__coll__graph.md5  classstd_1_1auto__ptr.xml  classstd_1_1auto__ptr__inherit__graph.md5  classstd_1_1bad__alloc.xml  classstd_1_1bad__alloc__inherit__graph.md5  classstd_1_1bad__cast.xml  classstd_1_1bad__cast__coll__graph.md5  classstd_1_1bad__exception.xml  classstd_1_1bad__exception__coll__graph.md5  classstd_1_1bad__typeid.xml  classstd_1_1bad__typeid__coll__graph.md5  classstd_1_1basic__fstream.xml  classstd_1_1basic__fstream__inherit__graph.md5  classstd_1_1basic__ifstream.xml  classstd_1_1basic__ifstream__inherit__graph.md5  classstd_1_1basic__ios.xml  classstd_1_1basic__ios__coll__graph.md5  classstd_1_1basic__iostream.xml  classstd_1_1basic__iostream__inherit__graph.md5  classstd_1_1basic__istream.xml  classstd_1_1basic__istream__inherit__graph.md5  classstd_1_1basic__istringstream.xml  classstd_1_1basic__istringstream__inherit__graph.md5  classstd_1_1basic__ofstream.xml  classstd_1_1basic__ofstream__inherit__graph.md5  classstd_1_1basic__ostream.xml  classstd_1_1basic__ostream__coll__graph.md5  classstd_1_1basic__ostringstream.xml  classstd_1_1basic__ostringstream__coll__graph.md5  (+270 more)
doc/html/: annotated.html  annotated_dup.js  classes.html  classjpcre2_1_1Except-members.html  classjpcre2_1_1Except.html  classjpcre2_1_1Except.js  classjpcre2_1_1Except__coll__graph.map  classjpcre2_1_1Except__coll__graph.md5  classjpcre2_1_1Except_a0f3e00116ab24b89836a2c2a66262e22.html  classjpcre2_1_1Except_a302b67f0fbc5f906bac67a4572ff29ec.html  classjpcre2_1_1Except_a569a8058f61bb4e0b7085f18c4bd528c.html  classjpcre2_1_1Except_a6781e0804575f11d6d8bb87ec2d036c6.html  classjpcre2_1_1Except_aa16bdec8432ee950955f7ad81a9655bb.html  classjpcre2_1_1Except_ade3963035e250d3cbf84ddaad2056fee.html  classjpcre2_1_1Regex-members.html  classjpcre2_1_1Regex.html  classjpcre2_1_1Regex.js  classjpcre2_1_1RegexMatch-members.html  classjpcre2_1_1RegexMatch.html  classjpcre2_1_1RegexMatch.js  classjpcre2_1_1RegexMatch__coll__graph.map  classjpcre2_1_1RegexMatch__coll__graph.md5  classjpcre2_1_1RegexMatch_a04926e61d8b5f1d8bdf344efecd567d8.html  classjpcre2_1_1RegexMatch_a04926e61d8b5f1d8bdf344efecd567d8_icgraph.map  classjpcre2_1_1RegexMatch_a04926e61d8b5f1d8bdf344efecd567d8_icgraph.md5  classjpcre2_1_1RegexMatch_a08c2e481fe8b9c001e67733fb4e33972.html  classjpcre2_1_1RegexMatch_a098ddb46b2f297870ea548ef07597d94.html  classjpcre2_1_1RegexMatch_a0a4cf8554a7e00f3cf2db34f60a43f60.html  classjpcre2_1_1RegexMatch_a0d76033d9c134caa9ddfc21849603920.html  classjpcre2_1_1RegexMatch_a1265862f04984dfde8d36e2ff409b0c9_cgraph.map  classjpcre2_1_1RegexMatch_a1265862f04984dfde8d36e2ff409b0c9_cgraph.md5  classjpcre2_1_1RegexMatch_a154430c66b8794d6632be6211a3ce870.html  classjpcre2_1_1RegexMatch_a1569b2ca66926d7d8c6a4cd6e6f5a4e2_icgraph.map  classjpcre2_1_1RegexMatch_a2c7efe1ec2e13827f670db4ecedcd0a0.html  classjpcre2_1_1RegexMatch_a2c7efe1ec2e13827f670db4ecedcd0a0_icgraph.map  classjpcre2_1_1RegexMatch_a2c7efe1ec2e13827f670db4ecedcd0a0_icgraph.md5  classjpcre2_1_1RegexMatch_a3da6a2319cd577d7f2f10c66dcf59a99.html  classjpcre2_1_1RegexMatch_a3e6e04f48cd5ee3fb9705214f746f343.html  classjpcre2_1_1RegexMatch_a40127e5057e2343848d8c8a6d4c32bcd.html  classjpcre2_1_1RegexMatch_a4ea72774ae5e9a93d649dcb0840efd7f.html  (+324 more)
doc/latex/: annotated.tex  classExcept_1_1Class.tex  classExcept_1_1Class__coll__graph.md5  classRegexMatch_1_1Provides.tex  classRegexMatch_1_1Provides__coll__graph.md5  classjpcre2_1_1Except.tex  classjpcre2_1_1Except__coll__graph.md5  classjpcre2_1_1Except_a0f3e00116ab24b89836a2c2a66262e22_icgraph.md5  classjpcre2_1_1Except_a6781e0804575f11d6d8bb87ec2d036c6_icgraph.md5  classjpcre2_1_1Regex.tex  classjpcre2_1_1RegexMatch.tex  classjpcre2_1_1RegexMatch__coll__graph.md5  classjpcre2_1_1RegexMatch_a04926e61d8b5f1d8bdf344efecd567d8_icgraph.md5  classjpcre2_1_1RegexMatch_a08c2e481fe8b9c001e67733fb4e33972_icgraph.md5  classjpcre2_1_1RegexMatch_a0a4cf8554a7e00f3cf2db34f60a43f60_icgraph.md5  classjpcre2_1_1RegexMatch_a1569b2ca66926d7d8c6a4cd6e6f5a4e2_icgraph.md5  classjpcre2_1_1RegexMatch_a2c7efe1ec2e13827f670db4ecedcd0a0_icgraph.md5  classjpcre2_1_1RegexMatch_a5330454d20526d7d935de202c856a679_cgraph.md5  classjpcre2_1_1RegexMatch_a5330454d20526d7d935de202c856a679_icgraph.md5  classjpcre2_1_1RegexMatch_a5868aef3a146594ea1ebef34d122bb33_a5868aef3a146594ea1ebef34d122bb33_cgraph.md5  classjpcre2_1_1RegexMatch_a5868aef3a146594ea1ebef34d122bb33_a5868aef3a146594ea1ebef34d122bb33_icgraph.md5  classjpcre2_1_1RegexMatch_a5868aef3a146594ea1ebef34d122bb33_cgraph.md5  (+147 more)
src/: .gitignore  Makefile.am  Makefile.in  a.out  clrbin  config.h  config.h.in  dummy  dummy.cpp  jpcre2.cpp  jpcre2.h  jpcre2.hpp  jpcre2_match.cpp  jpcre2_replace.cpp  jpcre2match  jpcre2match.cpp  jpcre2replace  jpcre2replace.cpp  jpcre2s.hpp  pcre2.h  pcre2_match.cpp  pcre2_substitute.c  test.cpp  test.hpp  test0.cpp  test1.cpp  test16.cpp  test32.cpp  test4  test4.cpp  testMatch2.cpp  testReplace.cpp  test_issue_29  test_issue_29.cpp  test_match  test_match.cpp  test_match2  test_match2.cpp  test_pr_31.cpp  test_pthread  (+19 more)
(+183 files in other folders)
