dist_html_DATA = \
	html/namespacemembers_func.html \
	html/thumb0.png \
	html/jquery.js \
	html/functions_rela.html \
	html/namespacemembers_eval.html \
	html/classjpcre2_1_1Regex_a92b75c438ccff871205b2175a6141fd5_cgraph.png \
	html/classjpcre2_1_1Regex_aad1d5ef1e87f762f68a587eec4022e69_cgraph.map \
	html/doxygen.png \
	html/classjpcre2_1_1Regex_a0430f0a7643258cba9dc1c29ad3bc31e_icgraph.map \
	html/classjpcre2_1_1Regex_aad1d5ef1e87f762f68a587eec4022e69_cgraph.png \
	html/navtree.css \
	html/annotated_dup.js \
	html/jpcre2_8hpp_source.html \
	html/arrowright.png \
	html/jpcre2_8hpp.html \
	html/classjpcre2_1_1RegexMatch_a5868aef3a146594ea1ebef34d122bb33_icgraph.map \
	html/namespacejpcre2_1_1utils.html \
	html/globals_defs.html \
	html/jpcre2_8hpp__dep__incl.md5 \
	html/classjpcre2_1_1Regex_aad1d5ef1e87f762f68a587eec4022e69_cgraph.md5 \
	html/test__match2_8cpp.html \
	html/namespacejpcre2.js \
	html/tab_a.png \
	html/classjpcre2_1_1Regex_ac592ce7a5e4210ed5f90a0105b1f2981_icgraph.map \
	html/classjpcre2_1_1Regex_ab93775a93a0a537d09b9e9ab4a5a3894_cgraph.map \
	html/functions.html \
	html/arrowdown.png \
	html/classjpcre2_1_1RegexReplace_af1069f489de9b343493da2dc77b04c73_icgraph.md5 \
	html/open.png \
	html/classjpcre2_1_1RegexMatch_a635c652195deaa8ebb9e107c4f972aab_icgraph.map \
	html/test__replace_8cpp__incl.md5 \
	html/classjpcre2_1_1RegexMatch.html \
	html/classjpcre2_1_1Regex.html \
	html/test__shorts_8cpp__incl.map \
	html/classes.html \
	html/classjpcre2_1_1RegexReplace__coll__graph.png \
	html/classjpcre2_1_1Regex_addd7c21abd0f4cf6c532a7602cfb5835_cgraph.png \
	html/classjpcre2_1_1Regex_a92b75c438ccff871205b2175a6141fd5_cgraph.map \
	html/dynsections.js \
	html/classjpcre2_1_1Regex_a9ffbb6aa54cb97125f1b4211bc1d09a5_cgraph.map \
	html/classjpcre2_1_1RegexMatch_a635c652195deaa8ebb9e107c4f972aab_icgraph.md5 \
	html/tab_b.png \
	html/folderclosed.png \
	html/namespacemembers.html \
	html/tabs.css \
	html/files.js \
	html/test__replace2_8cpp__incl.png \
	html/test__match_8cpp__incl.map \
	html/classjpcre2_1_1Regex__coll__graph.png \
	html/sync_off.png \
	html/classjpcre2_1_1Regex_addd7c21abd0f4cf6c532a7602cfb5835_cgraph.md5 \
	html/classjpcre2_1_1RegexMatch-members.html \
	html/test__match2_8cpp__incl.md5 \
	html/classjpcre2_1_1RegexReplace_af1069f489de9b343493da2dc77b04c73_icgraph.png \
	html/classjpcre2_1_1RegexMatch__coll__graph.md5 \
	html/namespacejpcre2_1_1ERROR.html \
	html/classjpcre2_1_1RegexReplace-members.html \
	html/classjpcre2_1_1RegexReplace_afd087fa7a9bfedec802d1a3dd7edbdd0_cgraph.map \
	html/classjpcre2_1_1RegexMatch_a9df7e92f96b61553f62720cb8f5f23e5_icgraph.png \
	html/classjpcre2_1_1Regex_ac592ce7a5e4210ed5f90a0105b1f2981_icgraph.png \
	html/test__replace_8cpp__incl.map \
	html/test__replace_8cpp__incl.png \
	html/functions_vars.html \
	html/globals.html \
	html/classjpcre2_1_1Regex_a92b75c438ccff871205b2175a6141fd5_cgraph.md5 \
	html/namespacemembers_vars.html \
	html/classjpcre2_1_1Regex_ac592ce7a5e4210ed5f90a0105b1f2981_cgraph.png \
	html/jpcre2_8hpp__incl.map \
	html/test__replace2_8cpp__incl.map \
	html/test__match_8cpp__incl.md5 \
	html/classjpcre2_1_1RegexReplace__coll__graph.md5 \
	html/classjpcre2_1_1Regex_a0430f0a7643258cba9dc1c29ad3bc31e_icgraph.md5 \
	html/classjpcre2_1_1RegexMatch__coll__graph.map \
	html/classjpcre2_1_1RegexMatch_a5868aef3a146594ea1ebef34d122bb33_icgraph.png \
	html/classjpcre2_1_1RegexReplace__coll__graph.map \
	html/classjpcre2_1_1RegexReplace_ae2abe2994b0fbe54950f88e63000c910_icgraph.map \
	html/classjpcre2_1_1Regex-members.html \
	html/classjpcre2_1_1Regex_ac592ce7a5e4210ed5f90a0105b1f2981_cgraph.map \
	html/index.html \
	html/classjpcre2_1_1RegexMatch_a635c652195deaa8ebb9e107c4f972aab_icgraph.png \
	html/classjpcre2_1_1RegexReplace_ae2abe2994b0fbe54950f88e63000c910_icgraph.png \
	html/jpcre2_8hpp.js \
	html/test__match_8cpp__incl.png \
	html/test__match2_8cpp__incl.map \
	html/classjpcre2_1_1RegexReplace_a46eefdb105827920bebc8436721fa4cb_icgraph.png \
	html/graph_legend.html \
	html/classjpcre2_1_1RegexReplace_afd087fa7a9bfedec802d1a3dd7edbdd0_icgraph.md5 \
	html/closed.png \
	html/navtree.js \
	html/splitbar.png \
	html/tab_s.png \
	html/namespaces.js \
	html/classjpcre2_1_1RegexReplace_af1069f489de9b343493da2dc77b04c73_icgraph.map \
	html/classjpcre2_1_1RegexReplace_afd087fa7a9bfedec802d1a3dd7edbdd0_cgraph.md5 \
	html/classjpcre2_1_1RegexMatch_a9df7e92f96b61553f62720cb8f5f23e5_icgraph.map \
	html/tab_h.png \
	html/classjpcre2_1_1RegexMatch_a5868aef3a146594ea1ebef34d122bb33_icgraph.md5 \
	html/dir_68267d1309a1af8e8297ef4c3efbcdba.html \
	html/files.html \
	html/classjpcre2_1_1RegexReplace.html \
	html/classjpcre2_1_1RegexMatch__coll__graph.png \
	html/jpcre2_8hpp__incl.md5 \
	html/navtreedata.js \
	html/sync_on.png \
	html/classjpcre2_1_1Regex_ac592ce7a5e4210ed5f90a0105b1f2981_icgraph.md5 \
	html/classjpcre2_1_1Regex_ab93775a93a0a537d09b9e9ab4a5a3894_cgraph.md5 \
	html/test__match_8cpp.html \
	html/nav_h.png \
	html/classjpcre2_1_1RegexReplace_afd087fa7a9bfedec802d1a3dd7edbdd0_icgraph.png \
	html/classjpcre2_1_1RegexMatch.js \
	html/classjpcre2_1_1RegexReplace_a46eefdb105827920bebc8436721fa4cb_icgraph.md5 \
	html/doc.png \
	html/nav_f.png \
	html/search/enumvalues_4.js \
	html/search/all_10.html \
	html/search/classes_0.js \
	html/search/pages_0.js \
	html/search/functions_8.js \
	html/search/functions_c.js \
	html/search/all_6.js \
	html/search/variables_4.html \
	html/search/variables_6.html \
	html/search/typedefs_0.js \
	html/search/all_11.html \
	html/search/defines_0.js \
	html/search/enumvalues_2.js \
	html/search/enumvalues_5.js \
	html/search/variables_3.html \
	html/search/functions_b.js \
	html/search/related_0.js \
	html/search/variables_8.js \
	html/search/functions_2.html \
	html/search/all_10.js \
	html/search/all_13.js \
	html/search/all_d.js \
	html/search/variables_5.html \
	html/search/functions_1.html \
	html/search/nomatches.html \
	html/search/variables_a.html \
	html/search/all_5.html \
	html/search/enumvalues_5.html \
	html/search/all_0.js \
	html/search/files_1.html \
	html/search/all_1.js \
	html/search/typedefs_0.html \
	html/search/all_9.html \
	html/search/all_e.html \
	html/search/typedefs_3.html \
	html/search/variables_3.js \
	html/search/typedefs_2.html \
	html/search/files_1.js \
	html/search/search_r.png \
	html/search/search_m.png \
	html/search/functions_3.html \
	html/search/functions_1.js \
	html/search/all_b.js \
	html/search/functions_6.html \
	html/search/functions_5.html \
	html/search/all_8.html \
	html/search/all_f.html \
	html/search/variables_9.js \
	html/search/typedefs_1.html \
	html/search/all_4.html \
	html/search/functions_4.html \
	html/search/all_a.js \
	html/search/variables_8.html \
	html/search/search.css \
	html/search/variables_6.js \
	html/search/all_b.html \
	html/search/all_2.html \
	html/search/namespaces_0.js \
	html/search/functions_6.js \
	html/search/search_l.png \
	html/search/classes_0.html \
	html/search/variables_0.html \
	html/search/searchdata.js \
	html/search/all_2.js \
	html/search/all_3.js \
	html/search/all_12.js \
	html/search/all_c.html \
	html/search/functions_9.js \
	html/search/functions_a.js \
	html/search/enumvalues_3.html \
	html/search/all_e.js \
	html/search/enumvalues_1.js \
	html/search/typedefs_1.js \
	html/search/variables_5.js \
	html/search/functions_b.html \
	html/search/all_7.js \
	html/search/files_0.js \
	html/search/all_4.js \
	html/search/functions_0.html \
	html/search/namespaces_0.html \
	html/search/variables_1.js \
	html/search/variables_2.html \
	html/search/functions_2.js \
	html/search/all_5.js \
	html/search/all_6.html \
	html/search/enumvalues_4.html \
	html/search/files_0.html \
	html/search/close.png \
	html/search/variables_7.js \
	html/search/all_8.js \
	html/search/mag_sel.png \
	html/search/variables_a.js \
	html/search/all_a.html \
	html/search/variables_2.js \
	html/search/functions_3.js \
	html/search/functions_5.js \
	html/search/functions_7.js \
	html/search/enumvalues_0.html \
	html/search/enumvalues_1.html \
	html/search/all_13.html \
	html/search/all_7.html \
	html/search/search.js \
	html/search/defines_0.html \
	html/search/enumvalues_3.js \
	html/search/variables_1.html \
	html/search/related_0.html \
	html/search/all_d.html \
	html/search/all_c.js \
	html/search/functions_4.js \
	html/search/typedefs_3.js \
	html/search/all_1.html \
	html/search/variables_4.js \
	html/search/functions_0.js \
	html/search/all_0.html \
	html/search/functions_a.html \
	html/search/functions_9.html \
	html/search/variables_9.html \
	html/search/all_9.js \
	html/search/functions_7.html \
	html/search/enumvalues_0.js \
	html/search/variables_0.js \
	html/search/variables_7.html \
	html/search/all_11.js \
	html/search/all_3.html \
	html/search/functions_c.html \
	html/search/all_12.html \
	html/search/pages_0.html \
	html/search/all_f.js \
	html/search/enumvalues_2.html \
	html/search/typedefs_2.js \
	html/search/functions_8.html \
	html/resize.js \
	html/test__replace2_8cpp__incl.md5 \
	html/jpcre2_8hpp__dep__incl.png \
	html/test__shorts_8cpp.html \
	html/bdwn.png \
	html/test__match2_8cpp__incl.png \
	html/doxygen.css \
	html/test__replace2_8cpp.html \
	html/classjpcre2_1_1Regex__coll__graph.map \
	html/classjpcre2_1_1Regex_a9ffbb6aa54cb97125f1b4211bc1d09a5_cgraph.png \
	html/classjpcre2_1_1RegexMatch_a9df7e92f96b61553f62720cb8f5f23e5_icgraph.md5 \
	html/navtreeindex0.js \
	html/test__replace_8cpp.html \
	html/classjpcre2_1_1Regex_a9ffbb6aa54cb97125f1b4211bc1d09a5_cgraph.md5 \
	html/classjpcre2_1_1RegexReplace_afd087fa7a9bfedec802d1a3dd7edbdd0_cgraph.png \
	html/annotated.html \
	html/test__shorts_8cpp__incl.md5 \
	html/classjpcre2_1_1Regex__coll__graph.md5 \
	html/nav_g.png \
	html/folderopen.png \
	html/graph_legend.md5 \
	html/namespaces.html \
	html/classjpcre2_1_1Regex_addd7c21abd0f4cf6c532a7602cfb5835_cgraph.map \
	html/classjpcre2_1_1RegexReplace.js \
	html/customdoxygen.css \
	html/classjpcre2_1_1Regex.js \
	html/classjpcre2_1_1RegexReplace_afd087fa7a9bfedec802d1a3dd7edbdd0_icgraph.map \
	html/classjpcre2_1_1Regex_a0430f0a7643258cba9dc1c29ad3bc31e_icgraph.png \
	html/jpcre2_8hpp__dep__incl.map \
	html/classjpcre2_1_1Regex_ab93775a93a0a537d09b9e9ab4a5a3894_cgraph.png \
	html/graph_legend.png \
	html/namespacejpcre2.html \
	html/classjpcre2_1_1Regex_ac592ce7a5e4210ed5f90a0105b1f2981_cgraph.md5 \
	html/classjpcre2_1_1RegexReplace_ae2abe2994b0fbe54950f88e63000c910_icgraph.md5 \
	html/classjpcre2_1_1RegexReplace_a46eefdb105827920bebc8436721fa4cb_icgraph.map \
	html/functions_func.html \
	html/test__shorts_8cpp__incl.png \
	html/jpcre2_8hpp__incl.png \
	html/namespacemembers_type.html \
	html/bc_s.png 
dist_man_MANS = \
	man/man3/test_replace2.cpp.3 \
	man/man3/jpcre2_RegexMatch.3 \
	man/man3/jpcre2_Regex.3 \
	man/man3/_home_jahid_Git_Github_jpcre2_jpcre2_src_.3 \
	man/man3/test_match2.cpp.3 \
	man/man3/test_match.cpp.3 \
	man/man3/test_replace.cpp.3 \
	man/man3/test_shorts.cpp.3 \
	man/man3/jpcre2_ERROR.3 \
	man/man3/jpcre2.hpp.3 \
	man/man3/jpcre2_RegexReplace.3 \
	man/man3/jpcre2.3 \
	man/man3/jpcre2_utils.3 
